force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/GE_OG_GS_Technician_Attachment__c.object-meta.xml
<CustomObject>
    <description>Used to store images and other attachments for passport, visa, certification and link to the Technician</description>
    <label>Technician Attachment</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>