force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/fields/GE_OG_Expertise__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Expertise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expertise</label>
    <referenceTo>SVMXC__Service_Group_Skills__c</referenceTo>
    <relationshipLabel>Technician Attachments</relationshipLabel>
    <relationshipName>Technician_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>