force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/fields/GE_OG_GS_Download_Link_to_Document__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Download_Link_to_Document__c</fullName>
    <inlineHelpText>Direct download of Document from a Chatter group</inlineHelpText>
    <label>Download Link to Document</label>
    <type>Url</type>
</CustomField>