force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/fields/GE_OG_GS_TA_Associated_To__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_TA_Associated_To__c</fullName>
    <description>AG 11/114 R-19384</description>
    <label>Associated To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blue Photo</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Changes to Competency Level</fullName>
            </value>
            <value>
                <fullName>Courses</fullName>
            </value>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>CTPS</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Identity Card</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Professional Work Council</fullName>
            </value>
            <value>
                <fullName>Proof of address</fullName>
            </value>
            <value>
                <fullName>Red Photo</fullName>
            </value>
            <value>
                <fullName>Site Entry</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>White Photo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>