force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/fields/GE_OG_GS_TA_Link_to_Document__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_TA_Link_to_Document__c</fullName>
    <description>AG 11/114 R-19384</description>
    <inlineHelpText>URL where document is stored</inlineHelpText>
    <label>Link to Document</label>
    <type>Url</type>
</CustomField>