force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/fields/GE_OG_GS_TA_Passport__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_TA_Passport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>AG 11/114 R-19384</description>
    <label>Passport</label>
    <referenceTo>GE_OG_GS_Passport__c</referenceTo>
    <relationshipLabel>Technician Attachments</relationshipLabel>
    <relationshipName>Technician_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>