force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/fields/GE_OG_GS_TA_Technician__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_TA_Technician__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>AG 11/114 R-19384</description>
    <label>Technician</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Technician Attachments</relationshipLabel>
    <relationshipName>Technician_TA</relationshipName>
    <type>Lookup</type>
</CustomField>