force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/fields/GE_OG_GS_Technician_Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_GS_Technician_Attachment_Name__c</fullName>
    <description>AG 11/114 R-19384</description>
    <label>Technician Attachment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>