force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/recordTypes/GE_AL.recordType-meta.xml
<RecordType>
    <fullName>GE_AL</fullName>
    <active>true</active>
    <label>GE AL</label>
</RecordType>