force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/recordTypes/GE_DS.recordType-meta.xml
<RecordType>
    <fullName>GE_DS</fullName>
    <active>true</active>
    <description>Drilling Purpose</description>
    <label>GE DS</label>
</RecordType>