force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/recordTypes/GE_DTS.recordType-meta.xml
<RecordType>
    <fullName>GE_DTS</fullName>
    <active>true</active>
    <label>GE DTS</label>
</RecordType>