force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/recordTypes/GE_MCS.recordType-meta.xml
<RecordType>
    <fullName>GE_MCS</fullName>
    <active>true</active>
    <description>Digital Solutions</description>
    <label>GE M&amp;C</label>
</RecordType>