force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/recordTypes/GE_PC.recordType-meta.xml
<RecordType>
    <fullName>GE_PC</fullName>
    <active>true</active>
    <label>GE PC</label>
</RecordType>