force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/recordTypes/GE_Subsea.recordType-meta.xml
<RecordType>
    <fullName>GE_Subsea</fullName>
    <active>true</active>
    <label>GE_Subsea</label>
</RecordType>