force-app/main/default/objects/GE_OG_GS_Technician_Attachment__c/recordTypes/GE_TMS.recordType-meta.xml
<RecordType>
    <fullName>GE_TMS</fullName>
    <active>true</active>
    <label>GE TMS</label>
</RecordType>